# SPDX-License-Identifier: AGPL-3.0-only
[lints]
workspace = true

[package]
name = "petal-tongue-discovery"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# HTTP client
reqwest = { workspace = true }  # Use workspace version (0.12 with rustls-tls)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = "0.4"

# Logging
tracing = "0.1"

# Low-level socket for multicast (uses libc for syscalls, not C crypto)
socket2 = "0.6"

# LRU cache for performance optimization (Phase 2) - pure Rust
lru = "0.16"

# mDNS discovery (optional feature) - pure Rust
mdns-sd = { version = "0.18", optional = true }

# Modern async patterns (Discovery Evolution)
futures = "0.3"  # For concurrent operations
rand = "0.8"     # For jitter in retry logic

[features]
default = []
mdns = ["mdns-sd"]
legacy-http = []  # Legacy HTTP provider (prefer JSON-RPC/Unix sockets)
# Mock provider - Run tests with: cargo test --features test-fixtures
test-fixtures = ["petal-tongue-core/test-fixtures"]

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tokio-test = "0.4"
wiremock = "0.6"
futures = "0.3"  # For join_all in concurrent tests
tempfile = "3"

