# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-discovery"
description = "Capability-based primal discovery for the ecoPrimals ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
tokio = { workspace = true }
thiserror = { workspace = true }

# HTTP client (thin hyper wrapper via petal-tongue-ipc)
petal-tongue-ipc = { path = "../petal-tongue-ipc" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Low-level socket for multicast (uses libc for syscalls, not C crypto)
socket2 = "0.6"

# LRU cache for performance optimization (Phase 2) - pure Rust
lru = "0.16"

# mDNS discovery (optional feature) - pure Rust
mdns-sd = { version = "0.18", optional = true }

# Modern async patterns (Discovery Evolution)
futures = "0.3"  # For concurrent operations
rand = { workspace = true }     # For jitter in retry logic

[features]
default = []
mdns = ["mdns-sd"]
# Mock provider - Run tests with: cargo test --features test-fixtures
test-fixtures = ["petal-tongue-core/test-fixtures"]

[dev-dependencies]
anyhow = { workspace = true }  # Unit tests and #[cfg(test)] helpers (mock_server, errors tests)
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tokio-test = "0.4"
wiremock = "0.6"
futures = "0.3"  # For join_all in concurrent tests
tempfile = "3"

