# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-entropy"
description = "Human entropy capture for petalTongue - multi-modal, accessible, sovereign"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
petal-tongue-core = { path = "../petal-tongue-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Streaming & Encryption
# Workspace: HTTP-only, no TLS (ecoBin: no ring/openssl)
reqwest = { workspace = true }
aes-gcm = "0.10"  # AES-256-GCM authenticated encryption
rand = { workspace = true }  # For nonce generation
zeroize = { version = "1", features = ["derive"] }  # Secure memory clearing

# Statistics (minimal)
# (We'll implement Shannon entropy & variance ourselves for zero-cost)

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"  # For floating-point comparisons in tests

[features]
default = []

# EVOLUTION COMPLETE: Audio entropy capture now uses AudioCanvas (pure Rust!)
# NO cpal, NO hound, NO ALSA dependencies - direct /dev/snd access
# For entropy capture, we read raw PCM data from audio devices
# Status: Phase 3 feature (not needed for core functionality)

video = ["nokhwa"]

# Video capture (optional, Phase 3 feature)
[dependencies.nokhwa]
version = "0.10"
optional = true

