# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-entropy"
description = "Human entropy capture for petalTongue - multi-modal, accessible, sovereign"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
petal-tongue-core = { path = "../petal-tongue-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Async
tokio = { workspace = true }

# Streaming & Encryption
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Statistics (minimal)
# (We'll implement Shannon entropy & variance ourselves for zero-cost)

[dev-dependencies]
tokio-test = { workspace = true }
approx = "0.5"  # For floating-point comparisons in tests

[features]
default = []

# Audio entropy: pure Rust AudioCanvas (/dev/snd). Phase 3 feature.
# Video entropy: Phase 3 (nokhwa removed — mozjpeg-sys C dep).

