[package]
name = "petal-tongue-graph"
description = "Multi-modal graph rendering engine (visual, audio, and future modalities)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-animation = { path = "../petal-tongue-animation" }

# BingoCube is now a standalone tool at https://github.com/ecoPrimals/bingoCube
# Use minimal features - audio requires system dependencies (ALSA on Linux)
bingocube-core = { git = "ssh://git@github.com/ecoPrimals/bingoCube.git", tag = "v0.1.0", default-features = false }
bingocube-adapters = { git = "ssh://git@github.com/ecoPrimals/bingoCube.git", tag = "v0.1.0", default-features = false, features = ["visual"] }

tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
anyhow = { workspace = true }
# Pure Rust audio file generation (no system dependencies - always available)
hound = { workspace = true }
rand = { workspace = true }
# Optional native audio playback (requires ALSA system libraries on Linux)
# Enable with: --features native-audio
rodio = { version = "0.19", optional = true }

[features]
default = []
native-audio = ["rodio"]

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
