# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-graph"
description = "Multi-modal graph rendering engine (visual, audio, and future modalities)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-animation = { path = "../petal-tongue-animation" }
petal-tongue-scene = { path = "../petal-tongue-scene", optional = true }

# BingoCube is a primalTool (ecoPrimals/primalTools/bingoCube)
# Discovered at runtime via capability-based discovery
# NO compile-time dependency - TRUE PRIMAL sovereignty!

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
egui = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
anyhow = { workspace = true }

# Pure Rust audio file generation (no system dependencies - always available)
hound = { workspace = true }
rand = { workspace = true }

# ✅ ALSA ELIMINATION COMPLETE
# NO rodio, NO cpal, NO ALSA dependencies
# Audio playback is external (ToadStool, AudioCanvas, or system-discovered)
# This crate only generates audio FILES (WAV via hound - pure Rust)

[features]
default = ["egui-render"]
egui-render = ["dep:egui", "dep:egui_extras", "dep:egui_plot", "dep:petal-tongue-scene"]

# REMOVED: native-audio feature (was requiring ALSA via rodio)
# Audio playback is now:
# - Tier 1: AudioCanvas (pure Rust /dev/snd access) - in petal-tongue-ui
# - Tier 2: ToadStool (network-based synthesis) - discovered at runtime
# - Tier 3: System audio (EXTERNAL) - discovered at runtime

[dev-dependencies]
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }
tokio = { workspace = true, features = ["test-util", "macros"] }
