# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-headless"
description = "Headless petalTongue - Pure Rust UI (zero GUI dependencies)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies ONLY — zero GUI / zero native display deps (PT-12 clean path).
# No eframe, egui, glow, winit, or OpenGL. This crate compiles and runs on
# headless servers without any windowing system or GPU.
# Set PETALTONGUE_HEADLESS=1 to force headless detection in detect_best_ui_mode().
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-ui-core = { path = "../petal-tongue-ui-core" }
petal-tongue-graph = { path = "../petal-tongue-graph" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.0"

