# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-ipc"
description = "Inter-process communication for petalTongue instances"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
hound = { workspace = true }
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-scene = { path = "../petal-tongue-scene" }
petal-tongue-ui-core = { path = "../petal-tongue-ui-core" }
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros", "rt"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# BTSP Phase 3: ChaCha20-Poly1305 AEAD + HKDF key derivation (pure Rust)
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Thin HTTP client (hyper — already transitive from axum, no new deps)
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }

# tarpc for high-performance primal-to-primal RPC
tarpc = { workspace = true }
tokio-util = { workspace = true }
tokio-serde = { workspace = true }
bincode = { workspace = true }

[features]
default = []
# Test helpers (env var manipulation, etc.) - only for cargo test --features test-fixtures
test-fixtures = ["petal-tongue-core/test-fixtures"]
# Live integration tests with running tarpc server
integration-tests = []

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "net", "io-util"] }
tempfile = { workspace = true }
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }

