[package]
name = "petal-tongue-primitives"
version = "0.1.0"
edition = "2021"
authors = ["ecoPrimals Contributors"]
description = "Universal UI rendering primitives for petalTongue"
license = "AGPL-3.0"

[dependencies]
# Core types
petal-tongue-core = { path = "../petal-tongue-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for data-driven UI)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Async traits
async-trait = "0.1"

# GUI framework (optional)
egui = { version = "0.29", optional = true }

# TUI framework (optional)
ratatui = { version = "0.29", optional = true }

[features]
default = []
egui = ["dep:egui"]
ratatui = ["dep:ratatui"]

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"

# No unsafe code allowed in this crate
# We enforce 100% safe Rust for UI primitives

[[example]]
name = "tree_demo"
path = "examples/tree_demo.rs"

[[example]]
name = "table_demo"
path = "examples/table_demo.rs"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

