# SPDX-License-Identifier: AGPL-3.0-only
[lints]
workspace = true

[package]
name = "petal-tongue-scene"
description = "Declarative scene graph, animation, grammar compiler, and modality dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
petal-tongue-core = { path = "../petal-tongue-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
