# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-tui"
version = "1.6.6"
edition.workspace = true
description = "Rich Terminal User Interface for petalTongue - Universal Interface for biomeOS"
authors = ["ecoPrimals Team"]
license.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
petal-tongue-scene = { path = "../petal-tongue-scene" }

# TUI Framework
ratatui = "0.28"

# Terminal handling
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = "0.1"

# Time
chrono = { workspace = true }

# Collections
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.10"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

