# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-tui"
description = "Rich Terminal User Interface for petalTongue - Universal Interface for biomeOS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
petal-tongue-scene = { path = "../petal-tongue-scene" }

# ratatui 0.30 shares the lru 0.16 / hashbrown 0.16 stack used elsewhere (avoids foldhash 0.1.5 via old lru).
ratatui = "0.30"

crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async traits
async-trait = "0.1"

# Time
chrono = { workspace = true }

# Collections
dashmap = "6.1"

[dev-dependencies]
anyhow = { workspace = true }  # examples/simple_demo.rs
tempfile = "3.10"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

