# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-tui"
description = "Rich Terminal User Interface for petalTongue - Universal Interface for biomeOS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-discovery = { path = "../petal-tongue-discovery" }
petal-tongue-ipc = { path = "../petal-tongue-ipc" }
petal-tongue-scene = { path = "../petal-tongue-scene" }

ratatui = { workspace = true }

crossterm = { workspace = true, features = ["event-stream"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Collections
dashmap = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }  # examples/simple_demo.rs
tempfile = { workspace = true }

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

