# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-ui-core"
description = "Pure Rust UI generation for petalTongue - terminal, SVG, text exports (zero native dependencies)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }
petal-tongue-graph = { path = "../petal-tongue-graph" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

bytes = { workspace = true }

# Logging
tracing = { workspace = true }

# Terminal UI (pure Rust, cross-platform)
crossterm = "0.28"
terminal_size = "0.4"

# 2D rendering (pure Rust, no native deps)
tiny-skia = "0.11"

# Image encoding (pure Rust)
png = "0.17"

# SVG generation (pure Rust)
svg = "0.14"

# Time
chrono = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }

[features]
default = []
test-fixtures = ["petal-tongue-core/test-fixtures"]

