# SPDX-License-Identifier: AGPL-3.0-or-later
[lints]
workspace = true

[package]
name = "petal-tongue-ui-core"
description = "Pure Rust UI generation for petalTongue - terminal, SVG, text exports (zero native dependencies)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
petal-tongue-core = { path = "../petal-tongue-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

bytes = { workspace = true }

# Logging
tracing = { workspace = true }

# Terminal UI (pure Rust, cross-platform)
crossterm = { workspace = true }
terminal_size = { workspace = true }

# 2D rendering (pure Rust, no native deps)
tiny-skia = { workspace = true }

# SVG generation (pure Rust)
svg = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
petal-tongue-core = { path = "../petal-tongue-core", features = ["test-fixtures"] }

[features]
default = []
test-fixtures = ["petal-tongue-core/test-fixtures"]

